--- a/ScrollableMessageBoxEx/ScrollableMessageBoxEx.csproj
+++ b/ScrollableMessageBoxEx/ScrollableMessageBoxEx.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>ThermoNetMessageBoxEx</RootNamespace>
-    <AssemblyName>ThermoNetMessageBoxEx</AssemblyName>
+    <AssemblyName>ScrollableMessageBoxEx</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
